fixed horizontal scrolling bug

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -24,6 +24,8 @@ nav {
     margin-top: 2%;
     margin-bottom: 2%;
     width: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
   }
 }
 
